# vulkan-pre-rotation-demo

./: .gitignore  .gitmodules  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: texture.frag  texture.frag.spv  texture.vert  texture.vert.spv
app/src/main/cpp/: Engine.cpp  Engine.h  Renderer.cpp  Renderer.h  Utils.h  VkHelper.cpp  VkHelper.h  main.cpp
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
